calculate and display the total shares and total amount

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 
     <!-- records table -->
     <div id="content">
+
+      <div class="info">
+        <span ng-model="totalShare">持有股數: {{ totalShare }}</span>
+        <span ng-model="totalAmount">投資金額: {{ totalAmount }}</span>
+      </div>
+
       <table class="table table-hover">
         <thead>
           <tr>
