display message when none of stock exist

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="btn btn-default" type="button" ng-click="addStock(newStockName)"><i class="glyphicon glyphicon-plus"></i></button>
       </span>
     </div>
+    <!-- new stock input end -->
 
     <hr>
 
@@ -27,70 +28,79 @@
         <p class="stock-link" ng-click="showContent(stock.name)" ng-class="{'stock-link-active': stock.name == selectedStock}">#&nbsp;&nbsp;{{ stock.name }}</p>
       </div>
     </div>
+    <!-- stock list end -->
 
   </div>
 
   <div id="container">
+    
+    <div id="wrapper" ng-hide="isEmpty">
+      <!-- new record input -->
+      <div id="input">
+        <form class="form-inline" role="form" ng-submit="addRecord()">
+          <div class="form-group">
+            <input type="text" id="datepicker" class="form-control" placeholder="日期" ng-model="date">
+          </div>
 
-    <!-- new record input -->
-    <div id="input">
-      <form class="form-inline" role="form" ng-submit="addRecord()">
-        <div class="form-group">
-          <input type="text" id="datepicker" class="form-control" placeholder="日期" ng-model="date">
+          <div class="form-group">
+            <select class="form-control" ng-model="action" ng-options="action for action in actions"><option></option></select>
+          </div>
+
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="股數" ng-model="share">
+          </div>
+
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="單價" ng-model="price">
+          </div>
+
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="總額" ng-model="amount">
+          </div>
+
+          <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>  
+        </form>
+      </div>
+      <!-- new record input end -->
+
+      <!-- records table -->
+      <div id="content">
+
+        <div class="info">
+          <span ng-model="totalShare">持有股數: {{ totalShare }}</span>
+          <span ng-model="totalAmount">投資金額: {{ totalAmount }}</span>
         </div>
 
-        <div class="form-group">
-          <select class="form-control" ng-model="action" ng-options="action for action in actions"><option></option></select>
-        </div>
-
-        <div class="form-group">
-          <input type="number" class="form-control" placeholder="股數" ng-model="share">
-        </div>
-
-        <div class="form-group">
-          <input type="number" class="form-control" placeholder="單價" ng-model="price">
-        </div>
-
-        <div class="form-group">
-          <input type="number" class="form-control" placeholder="總額" ng-model="amount">
-        </div>
-
-        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>  
-      </form>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>日期</th>
+              <th>類型</th>
+              <th>股數</th>
+              <th>單價</th>
+              <th>總額</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="record in records">
+              <td>{{ record.date }}</td>
+              <td>{{ record.action }}</td>
+              <td>{{ record.share }}</td>
+              <td>{{ record.price }}</td>
+              <td>{{ record.amount }}</td>
+              <td>
+                <button class="btn btn-danger" ng-click="delete(record._id)"><i class="glyphicon glyphicon-trash"></i></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- records table end -->
     </div>
 
-    <!-- records table -->
-    <div id="content">
-
-      <div class="info">
-        <span ng-model="totalShare">持有股數: {{ totalShare }}</span>
-        <span ng-model="totalAmount">投資金額: {{ totalAmount }}</span>
-      </div>
-
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>日期</th>
-            <th>類型</th>
-            <th>股數</th>
-            <th>單價</th>
-            <th>總額</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="record in records">
-            <td>{{ record.date }}</td>
-            <td>{{ record.action }}</td>
-            <td>{{ record.share }}</td>
-            <td>{{ record.price }}</td>
-            <td>{{ record.amount }}</td>
-            <td>
-              <button class="btn btn-danger" ng-click="delete(record._id)"><i class="glyphicon glyphicon-trash"></i></button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div id="message" ng-show="isEmpty">
+      請在視窗左上角新增一個股票開始!
     </div>
   </div>
 
