--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- stock list -->
     <div>
       <div ng-repeat="stock in stocks">
-        <p class="stock-link" ng-click="showContent(stock.name)" ng-class="{'stock-link-active': stock.name == selectedStock}">#&nbsp;&nbsp;{{ stock.name }}</p>
+        <p class="stock-link" ng-click="showContent(stock)" ng-class="{'stock-link-active': stock.name == selectedStock}">#&nbsp;&nbsp;{{ stock.name }}</p>
       </div>
     </div>
     <!-- stock list end -->
@@ -69,8 +69,10 @@
       <div id="content">
 
         <div class="info">
-          <span ng-model="totalShare">持有股數: {{ totalShare }}</span>
-          <span ng-model="totalAmount">投資金額: {{ totalAmount }}</span>
+          <div ng-model="currentPrice">目前股價: {{ currentPrice }}</div>
+          <div ng-model="change">漲跌幅度: {{ change }}</div>
+          <div ng-model="totalShare">持有股數: {{ totalShare }}</div>
+          <div ng-model="totalAmount">投資金額: {{ totalAmount }}</div>
         </div>
 
         <table class="table table-hover">
