enable to choose the stock when the stock name that user input matches multiple stocks

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/jquery.datetimepicker.css">
+  <link rel="stylesheet" href="css/ngDialog.min.css">
+  <link rel="stylesheet" href="css/ngDialog-theme-default.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body ng-controller="StockListCtrl">
@@ -112,6 +114,7 @@
     window.$ = window.jQuery = require("./js/jquery-1.11.3.min.js");
   </script>
   <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/ngDialog.min.js"></script>
   <script type="text/javascript" src="js/jquery.datetimepicker.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
